Recap Search And Show Conditional Show All Button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                 <button class="btn btn-primary">Buy Now</button>
                 </div>
             </div> -->
+        <!-- </div> -->
         </div>
+        <!-- show all button  -->
+        <div id="show_all_container" class="hidden">
+            <button class="btn btn-primary">Show all</button>
         </div>
     </section>
     </main>
