Dynamic API Data Load for phone Show Details button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
         <!-- search result  -->
     <section>
+        <div id="loadingSpinerr" class="text-center my-40 hidden">
+            <span class="loading loading-spineer text-primary loading-lg"></span>
+        </div>
         <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             
         <!-- <div class="card w-96 bg-base-100 shadow-xl">
@@ -35,10 +38,29 @@
         <!-- </div> -->
         </div>
         <!-- show all button  -->
-        <div id="show_all_container" class="hidden">
+        <div id="show_all_container" class="hidden text-center my-8">
             <button class="btn btn-primary">Show all</button>
         </div>
     </section>
+
+    <!-- shoe details modal  -->
+    <!-- Open the modal using ID.showModal() method -->
+<button class="btn" onclick="showDetails_modal.showModal()">open modal</button>
+<dialog id="showDetails_modal" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+    <h3 class="font-bold text-lg">Hello!</h3>
+    <p class="py-4">Press ESC key or click the button below to close</p>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
+
+
     </main>
     <footer>
 
