--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
 
     <!-- shoe details modal  -->
     <!-- Open the modal using ID.showModal() method -->
-<button class="btn" onclick="showDetails_modal.showModal()">open modal</button>
+<!-- <button class="btn" onclick="showDetails_modal.showModal()">open modal</button> -->
 <dialog id="showDetails_modal" class="modal modal-bottom sm:modal-middle">
   <div class="modal-box">
-    <h3 class="font-bold text-lg">Hello!</h3>
-    <p class="py-4">Press ESC key or click the button below to close</p>
+    <h3 id="show_details_Phone_name" class="font-bold text-lg">   </h3>
+    <div id="show_details_container">
+
+    </div>
     <div class="modal-action">
       <form method="dialog">
         <!-- if there is a button in form, it will close the modal -->
